--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     height: 100vh;
     display:grid;
     place-items:center;
-    background-image: url(https://www.gannett-cdn.com/media/2022/06/09/USATODAY/usatsports/gettyimages-1323823418.jpg);
+    background-image: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fpngtree.com%2Ffree-backgrounds-photos%2Ftemperature&psig=AOvVaw07qGW3NCt-OjaNL_sJVnE_&ust=1700825228203000&source=images&cd=vfe&ved=0CBIQjRxqFwoTCPjw0e6B2oIDFQAAAAAdAAAAABAE);
     background-repeat: no-repeat;
     background-size: cover;
 }
